// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiCallOut is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiCallOut ouiCallOut--primary testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiText ouiText--small"
  >
    <div
      class="ouiTextColor ouiTextColor--default"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`OuiCallOut props color danger is rendered 1`] = `
<div
  class="ouiCallOut ouiCallOut--danger"
/>
`;

exports[`OuiCallOut props color primary is rendered 1`] = `
<div
  class="ouiCallOut ouiCallOut--primary"
/>
`;

exports[`OuiCallOut props color success is rendered 1`] = `
<div
  class="ouiCallOut ouiCallOut--success"
/>
`;

exports[`OuiCallOut props color warning is rendered 1`] = `
<div
  class="ouiCallOut ouiCallOut--warning"
/>
`;

exports[`OuiCallOut props dismissible close callout after click 1`] = `
<OuiCallOut
  dismissible={true}
  title="This is a callout"
>
  <div
    className="ouiCallOut ouiCallOut--primary"
  >
    <div
      className="ouiCallOutHeader"
    >
      <span
        className="ouiCallOutHeader__title"
      >
        This is a callout
      </span>
    </div>
    <OuiButtonIcon
      aria-label="dismissible_icon"
      className="ouiCallOut__closeIcon"
      data-test-subj="closeCallOutButton"
      iconType="cross"
      onClick={[Function]}
    >
      <button
        aria-label="dismissible_icon"
        className="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiCallOut__closeIcon"
        data-test-subj="closeCallOutButton"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <OuiIcon
          aria-hidden="true"
          className="ouiButtonIcon__icon"
          color="inherit"
          size="m"
          type="cross"
        >
          <span
            aria-hidden="true"
            className="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
            size="m"
          />
        </OuiIcon>
      </button>
    </OuiButtonIcon>
  </div>
</OuiCallOut>
`;

exports[`OuiCallOut props dismissible close callout after click 2`] = `
<OuiCallOut
  dismissible={true}
  title="This is a callout"
/>
`;

exports[`OuiCallOut props dismissible is not rendered when in danger color 1`] = `
<div
  class="ouiCallOut ouiCallOut--danger"
/>
`;

exports[`OuiCallOut props dismissible is not rendered when in warning color 1`] = `
<div
  class="ouiCallOut ouiCallOut--warning"
/>
`;

exports[`OuiCallOut props dismissible is rendered when set to true 1`] = `
<div
  class="ouiCallOut ouiCallOut--primary"
>
  <button
    aria-label="dismissible_icon"
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiCallOut__closeIcon"
    data-test-subj="closeCallOutButton"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="cross"
    />
  </button>
</div>
`;

exports[`OuiCallOut props heading h1 is rendered 1`] = `
<div
  class="ouiCallOut ouiCallOut--primary"
/>
`;

exports[`OuiCallOut props heading h2 is rendered 1`] = `
<div
  class="ouiCallOut ouiCallOut--primary"
/>
`;

exports[`OuiCallOut props heading h3 is rendered 1`] = `
<div
  class="ouiCallOut ouiCallOut--primary"
/>
`;

exports[`OuiCallOut props heading h4 is rendered 1`] = `
<div
  class="ouiCallOut ouiCallOut--primary"
/>
`;

exports[`OuiCallOut props heading h5 is rendered 1`] = `
<div
  class="ouiCallOut ouiCallOut--primary"
/>
`;

exports[`OuiCallOut props heading h6 is rendered 1`] = `
<div
  class="ouiCallOut ouiCallOut--primary"
/>
`;

exports[`OuiCallOut props heading p is rendered 1`] = `
<div
  class="ouiCallOut ouiCallOut--primary"
/>
`;

exports[`OuiCallOut props iconType is rendered 1`] = `
<div
  class="ouiCallOut ouiCallOut--primary"
/>
`;

exports[`OuiCallOut props title is rendered 1`] = `
<div
  class="ouiCallOut ouiCallOut--primary"
>
  <div
    class="ouiCallOutHeader"
  >
    <span
      class="ouiCallOutHeader__title"
    >
      Title
    </span>
  </div>
  <div
    class="ouiText ouiText--small"
  >
    <div
      class="ouiTextColor ouiTextColor--default"
    >
      Content
    </div>
  </div>
</div>
`;
